[tool.poetry]
name = "pytest-fixture-rtttg"
version = "0.1.0"
description = "Warn or fail on fixture name clash"
authors = ["L3viathan <git@l3vi.de>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
fixture_rtttg = "pytest_fixture_rtttg"
